tests/init/neg/i15459.check
-- Error: tests/init/neg/i15459.scala:3:10 -----------------------------------------------------------------------------
3 |  println(this)  // error
  |          ^^^^
  |          Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak.
  |          Found = ThisRef[class Sub]. 
  |          Non initialized field(s): value b. Calling trace:
  |          -> class Sub extends Sup:	[ i15459.scala:5 ]
  |             ^
  |          -> class Sup:	[ i15459.scala:1 ]
  |             ^
  |          -> println(this)  // error	[ i15459.scala:3 ]
  |                     ^^^^
